--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit."</p> 
       
       <img class="separator" src="./images/pattern-divider-mobile.svg" alt="">
-      <button class="boton" onclick="newAdvice()"><img class="icon" src="./images/icon-dice.svg" alt=""></button>
+      <button class="boton" onclick="newAdvice()" aria-label="boton para nuevo advice"><img class="icon" src="./images/icon-dice.svg" alt=""></button>
     </article>
 
   </div>
